--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="row header__row d-flex justify-content-center align-items-center">
+            <div class="row header__row d-flex justify-content-between align-items-center">
                 <div class="col-9 col-lg-3">
                     <div class="header__logo">
                         <a href="#"><img src="img/logo_head.svg" alt=""></a>
