--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                             будівництвом об’єктів будь-якої <br>
                             складності. </p>
                         <button class="btn">Побудувати <img src="img/Arrow 3.svg" alt=""></button>
+                        <div class="line-for-btn"></div>
+                        <div class="svg"><img src="img/Rectangle 7.svg" alt=""></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
