--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="row about-bg d-flex justify-content-center">
+                <div class="col-12 col-lg-5">
+                    <h2 class="title-section">ПРО НАС</h2>
+                </div>
+                <div class="col-12 col-lg-7">
+                    <div class="about__text d-flex">
+                        <p> <strong>Наші найцінніші ресурси</strong> - це наші люди, які <br> несуть наші цінності та
+                            нашу репутацію, бо <br>
+                            великі справи ніколи не робляться тілки <br> однією людиною.</p>
+                        <p> <strong>Головний принцип компанії</strong> : Виконуй таку <br> роботу, яка змушує наших
+                            клієнтів хотіти, <br>
+                            щоб ми робити їх наступний обєкт.</p>
+                        <div class="about__line-left"></div>
+                        <div class="about__line-right"></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row about-bg2">
+                <div class="col-12 col-lg-5 order-2 order-lg-1">
+                    <div class="about-bg2__img">
+                        <img src="img/aboutimg.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-7 order-1 order-lg-2">
+                    <div class="about-bg2__text2">
+                        <p> <span class="about-bg2__text2_strong-text">Вертексбуд - це сімейна будівельна компанія,
+                                заснована співласником з 35-річним
+                                будівельнйм
+                                досвідом.</span></p>
+
+                        <p>Перший збудований обєкт Молодіжний жітловий комплекс був сданий в експлуатацію у 1986 році.
+                            Саме тоді й почалась будівельна історія, яка й легла в основу Вертексбуд.</p>
+                            <div class="about-bg2__line"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <script src="js/sliderHomeSection.js"></script>
     <script src="js/burgerMenu.js"></script>
 </body>
