--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
                 </div>
                 <div class="col-12 col-lg-8">
                     <div class="home-page__title_photo">
-                        <div class="slide fade"><img src="img/lance.png" alt=""></div>
-                        <div class="slide fade"><img src="img/lance.png" alt=""></div>
-                        <div class="slide fade"><img src="img/lance.png" alt=""></div>
+                        <div class="slide fade"></div>
+                        <div class="slide fade"></div>
+                        <div class="slide fade"></div>
                         <div class="btn-switch d-flex ">
                             <button id="back" onclick="plusSlides(-1)"><img src="img/back.png" alt=""></button>
                             <button id="next" onclick="plusSlides(1)"><img src="img/next.png" alt=""></button>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -72,24 +71,27 @@
     </section>
     <section class="about">
         <div class="container">
-            <div class="row about-bg d-flex justify-content-center">
-                <div class="col-12 col-lg-5">
-                    <h2 class="title-section">ПРО НАС</h2>
-                </div>
-                <div class="col-12 col-lg-7">
-                    <div class="about__text d-flex">
-                        <p> <strong>Наші найцінніші ресурси</strong> - це наші люди, які <br> несуть наші цінності та
-                            нашу репутацію, бо <br>
-                            великі справи ніколи не робляться тілки <br> однією людиною.</p>
-                        <p> <strong>Головний принцип компанії</strong> : Виконуй таку <br> роботу, яка змушує наших
-                            клієнтів хотіти, <br>
-                            щоб ми робити їх наступний обєкт.</p>
-                        <div class="about__line-left"></div>
-                        <div class="about__line-right"></div>
+            <div class="col-12">
+                <div class="row about-bg d-flex justify-content-center">
+                    <div class="col-12 col-lg-5">
+                        <h2 class="title-section">ПРО НАС</h2>
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="about__text d-flex">
+                            <p> <strong>Наші найцінніші ресурси</strong> - це наші люди, які <br> несуть наші цінності
+                                та
+                                нашу репутацію, бо <br>
+                                великі справи ніколи не робляться тілки <br> однією людиною.</p>
+                            <p> <strong>Головний принцип компанії</strong> : Виконуй таку <br> роботу, яка змушує наших
+                                клієнтів хотіти, <br>
+                                щоб ми робити їх наступний обєкт.</p>
+                            <div class="about__line-left"></div>
+                            <div class="about__line-right"></div>
+                        </div>
                     </div>
                 </div>
-
             </div>
+
             <div class="row about-bg2">
                 <div class="col-12 col-lg-5 order-2 order-lg-1">
                     <div class="about-bg2__img">
@@ -105,7 +107,7 @@
 
                         <p>Перший збудований обєкт Молодіжний жітловий комплекс був сданий в експлуатацію у 1986 році.
                             Саме тоді й почалась будівельна історія, яка й легла в основу Вертексбуд.</p>
-                            <div class="about-bg2__line"></div>
+                        <div class="about-bg2__line"></div>
                     </div>
                 </div>
             </div>
