--- a/index.html
+++ b/index.html
@@ -114,6 +114,67 @@
         </div>
 
     </section>
+    <section class="work">
+        <div class="work-bg"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="title-section">Етапи роботи</h1>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="work__item">
+                        <div class="work__item_id">01</div>
+                        <div class="work__item_text">
+                            <h3 class="work__item_text_title">ІДЕЯ</h3>
+                            <p>Аналізуємо ідею та можлиівсть <br> її втілення в проєкт
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="work__item">
+                        <div class="work__item_id">02</div>
+                        <div class="work__item_text">
+                            <h3 class="work__item_text_title">ПЛАНУВАННЯ</h3>
+                            <p>Створюємо стратегію проєкту <br>
+                                з усіма побажаннями клієнта
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="work__item">
+                        <div class="work__item_id">03</div>
+                        <div class="work__item_text">
+                            <h3 class="work__item_text_title">ДОКУМЕНТАЦІЯ</h3>
+                            <p>Готуємо технічні та юридичні <br> документи за вимогами клієнта
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="work__item">
+                        <div class="work__item_id">04</div>
+                        <div class="work__item_text">
+                            <h3 class="work__item_text_title">ПІДГОТОВКА</h3>
+                            <p>Збираємо необхідні ресурси для <br> початку робіт згідно плану
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="work__item">
+                        <div class="work__item_id">05</div>
+                        <div class="work__item_text">
+                            <h3 class="work__item_text_title">БУДІВНИЦТВО</h3>
+                            <p>Основні роботи, контроль, <br> введення в експлуатацію
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/sliderHomeSection.js"></script>
     <script src="js/burgerMenu.js"></script>
 </body>
