--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="col-12 col-lg-8">
                     <div class="home-page__title_photo">
                         <div class="slide fade"></div>
-                        <div class="slide fade"></div>
-                        <div class="slide fade"></div>
+                        <div class="slide slide1 fade"></div>
+                        <div class="slide slide2 fade"></div>
                         <div class="btn-switch d-flex ">
                             <button id="back" onclick="plusSlides(-1)"><img src="img/back.png" alt=""></button>
                             <button id="next" onclick="plusSlides(1)"><img src="img/next.png" alt=""></button>
