--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                     <div class="work__item">
                         <div class="work__item_id">02</div>
                         <div class="work__item_text">
+                            <div class="line-item-rifht"></div>
                             <h3 class="work__item_text_title">ПЛАНУВАННЯ</h3>
                             <p>Створюємо стратегію проєкту <br>
                                 з усіма побажаннями клієнта
@@ -164,7 +165,10 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="work__item">
-                        <div class="work__item_id">05</div>
+                        <div class="item-id">
+                            <div class="work__item_id">05</div>
+                            <div class="line-item-left"></div>
+                        </div>
                         <div class="work__item_text">
                             <h3 class="work__item_text_title">БУДІВНИЦТВО</h3>
                             <p>Основні роботи, контроль, <br> введення в експлуатацію
