--- a/index.html
+++ b/index.html
@@ -179,6 +179,65 @@
             </div>
         </div>
     </section>
+    <section class="servis">
+        <div class="container">
+            <div class="services">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="title-section">Послуги</h1>
+                    </div>
+                </div>
+                <div class="item row d-flex align-items-center">
+                    <div class="col-12 col-lg-4">
+                        <div class="servis__item">
+                            <div class="servis__item_title">Генеральний будівельний підряд
+                            </div>
+                            <div class="servis__item_text">Працюючи як генпідрядник, компанія бере на себе всю
+                                відповідальність за своєчасне досягнення кінцевого результату, організовуючи злагоджену
+                                роботу будівельного майданчика і всіх задіяних на ній фахівців.
+                            </div>
+                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-8">
+                        <div class="servis__img"><img src="img/servis1.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="item row d-flex align-items-center">
+                    <div class="col-12 col-lg-8">
+                        <div class="servis__img"><img src="img/rekonstrukciya-zdaniy 1.png" alt=""></div>
+                    </div>
+                    <div class="col-12 col-lg-2">
+                        <div class="servis__item">
+                            <div class="servis__item_title">Реконструкція та ремонт будівель
+                            </div>
+                            <div class="servis__item_text">Наша Компанія може запропонувати вам комплексну реконструкцію
+                                будь-якої будівлі або приміщення, незалежно від його початкового функціонального
+                                призначення та рівня зношеності.
+                            </div>
+                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="item row d-flex align-items-center">
+                    <div class="col-12 col-lg-4">
+                        <div class="servis__item">
+                            <div class="servis__item_title">Реконструкція та ремонт будівель
+                            </div>
+                            <div class="servis__item_text">Наша Компанія може запропонувати вам комплексну реконструкцію
+                                будь-якої будівлі або приміщення, незалежно від його початкового функціонального
+                                призначення та рівня зношеності.
+                            </div>
+                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-8">
+                        <div class="servis__img"><img src="img/rekonstrukciya-zdaniy 1.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/sliderHomeSection.js"></script>
     <script src="js/burgerMenu.js"></script>
 </body>
