--- a/index.html
+++ b/index.html
@@ -187,52 +187,129 @@
                         <h1 class="title-section">Послуги</h1>
                     </div>
                 </div>
-                <div class="item row d-flex align-items-center">
-                    <div class="col-12 col-lg-4">
-                        <div class="servis__item">
-                            <div class="servis__item_title">Генеральний будівельний підряд
+                <div class="row d-flex align-items-center ">
+                    <div class="items-right">
+                        <div class="col-12 col-lg-4">
+                            <div class="servis__item">
+                                <div class="servis__item_title">Генеральний будівельний підряд
+                                </div>
+                                <div class="servis__item_text">Працюючи як генпідрядник, компанія бере на себе всю
+                                    відповідальність за своєчасне досягнення кінцевого результату, організовуючи
+                                    злагоджену
+                                    роботу будівельного майданчика і всіх задіяних на ній фахівців.
+                                </div>
+                                <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png"
+                                        alt=""></button>
                             </div>
-                            <div class="servis__item_text">Працюючи як генпідрядник, компанія бере на себе всю
-                                відповідальність за своєчасне досягнення кінцевого результату, організовуючи злагоджену
-                                роботу будівельного майданчика і всіх задіяних на ній фахівців.
-                            </div>
-                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-8">
-                        <div class="servis__img"><img src="img/servis1.png" alt=""></div>
-                    </div>
-                </div>
-                <div class="item row d-flex align-items-center">
-                    <div class="col-12 col-lg-8">
-                        <div class="servis__img"><img src="img/rekonstrukciya-zdaniy 1.png" alt=""></div>
-                    </div>
-                    <div class="col-12 col-lg-2">
-                        <div class="servis__item">
-                            <div class="servis__item_title">Реконструкція та ремонт будівель
-                            </div>
-                            <div class="servis__item_text">Наша Компанія може запропонувати вам комплексну реконструкцію
-                                будь-якої будівлі або приміщення, незалежно від його початкового функціонального
-                                призначення та рівня зношеності.
-                            </div>
-                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
+                        <div class="col-12 col-lg-8">
+                            <div class="servis__img"><img src="img/servis1.png" alt=""></div>
                         </div>
                     </div>
                 </div>
-                <div class="item row d-flex align-items-center">
-                    <div class="col-12 col-lg-4">
-                        <div class="servis__item">
-                            <div class="servis__item_title">Реконструкція та ремонт будівель
+                <div class="row d-flex align-items-center ">
+                    <div class="items-left">
+                        <div class="col-12 col-lg-8">
+                            <div class="servis__img"><img src="img/servis2.png" alt=""></div>
+                        </div>
+                        <div class="col-12 col-lg-2">
+                            <div class="servis__item">
+                                <div class="servis__item_title">Загальнобудівельні роботи
+                                </div>
+                                <div class="servis__item_text">цілий комплекс будівельних робіт, різного характеру і
+                                    напрямки, в які входить зведення, будівництво і реконструкція будівель, споруд та
+                                    інших будівельних Об’єктів, що здійснюються на різних етапах будівництва,
+                                    експлуатації або ремонту.
+                                </div>
+                                <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png"
+                                        alt=""></button>
                             </div>
-                            <div class="servis__item_text">Наша Компанія може запропонувати вам комплексну реконструкцію
-                                будь-якої будівлі або приміщення, незалежно від його початкового функціонального
-                                призначення та рівня зношеності.
-                            </div>
-                            <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png" alt=""></button>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-8">
-                        <div class="servis__img"><img src="img/rekonstrukciya-zdaniy 1.png" alt=""></div>
+                </div>
+                <div class="row d-flex align-items-center ">
+                    <div class="items-right">
+                        <div class="col-12 col-lg-4">
+                            <div class="servis__item">
+                                <div class="servis__item_title">Реконструкція та ремонт будівель
+                                </div>
+                                <div class="servis__item_text">Наша Компанія може запропонувати вам комплексну
+                                    реконструкцію будь-якої будівлі або приміщення, незалежно від його початкового
+                                    функціонального призначення та рівня зношеності.
+                                </div>
+                                <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png"
+                                        alt=""></button>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="servis__img"><img src="img/rekonstrukciya-zdaniy 1.png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex align-items-center ">
+                    <div class="items-left">
+                        <div class="col-12 col-lg-8">
+                            <div class="servis__img"><img src="img/servis4.png" alt=""></div>
+                        </div>
+                        <div class="col-12 col-lg-2">
+                            <div class="servis__item">
+                                <div class="servis__item_title">Сервіс у будівництві
+                                </div>
+                                <div class="servis__item_text">Ми впроваджуємо нові сучасні стандарти сервісу,
+                                    комунікації та формування лояльності на будівельному ринку Києва та Київської
+                                    області, прагнемо зруйнувати стереотипи і показати будівництво нового покоління.
+                                </div>
+                                <button class="servis__item_btn">Більше деталей<img src="img/Arrow 4.png"
+                                        alt=""></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-5">
+                    <div class="about-us__img"></div>
+                </div>
+                <div class="col-12 col-lg-7">
+                    <div class="about-us__items">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-12 col-md-6">
+                                <div class="about-us__item">
+                                    <h3 class="about-us__item_title">КОМАНДА</h3>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при
+                                        Сьогодні послуга влаштування пальових основ затребувана при </p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="about-us__item">
+                                    <h3 class="about-us__item_title">ДОСВІД</h3>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="about-us__item">
+                                    <h3 class="about-us__item_title">НАДІЙНІСТЬ</h3>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при </p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="about-us__item">
+                                    <h3 class="about-us__item_title">ІННОВАЦІЙНІСТЬ</h3>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при  </p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div class="about-us__item">
+                                    <div class="line-about-us"></div>
+                                    <h3 class="about-us__item_title">ПРАКТИЧНІСТЬ</h3>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
