--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <div class="col-12 col-md-6">
                                 <div class="about-us__item">
                                     <h3 class="about-us__item_title">ІННОВАЦІЙНІСТЬ</h3>
-                                    <p>Сьогодні послуга влаштування пальових основ затребувана при  </p>
+                                    <p>Сьогодні послуга влаштування пальових основ затребувана при </p>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
@@ -310,6 +310,31 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="form">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="form__callback">
+                        <div class="form__callback_line"></div>
+                        <div class="form__callback_title">Ми раді будемо вам допомогти</div>
+                        <input id="name" type="text" placeholder="Ім’я">
+                        <input id="phone" type="text" placeholder="Номер телефону">
+                        <div class="form__callback_chbox">
+                            <input type="checkbox" id="check">
+                            <label for="check">Я погоджуюсь з політикою конфіденційності</label>
+                        </div>
+                        <button id="send">Надіслати запит <img src="img/Arrow 5.png" alt=""></button>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="form-img">
+                        <div class="form__img_line"></div>
+                        <div class="form__img"></div>
                     </div>
                 </div>
             </div>
