--- a/index.html
+++ b/index.html
@@ -340,6 +340,52 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-7">
+                    <div class="footer__logo"><a href="#"><img src="img/footer.svg" alt=""></a></div>
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <div class="footer__contact">
+                                <h3 class="footer__contact_title">Телефон:</h3>
+                                <p>+380 (093) 1122333</p>
+                            </div>
+                            <div class="footer__contact">
+                                <h3 class="footer__contact_title">Адреса:</h3>
+                                <p>вул. Зелена 149, м. Львів</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="footer__contact">
+                                <h3 class="footer__contact_title">Email:</h3>
+                                <p>info@gmail</p>
+                            </div>
+                            <div class="footer__contact">
+                                <h3 class="footer__contact_title">Графік роботи:</h3>
+                                <p>Понеділок-Пятниця</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                    <div class="footer__menu">
+                        <ul class="footer__menu_nav">
+                            <li><a href="#">Контакти</a></li>
+                            <li><a href="#">Проєкти</a></li>
+                            <li><a href="#">Команда</a></li>
+                            <li><a href="#">Про нас</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__form">
+                        <h3 class="footer__form_title">ЗАЛИШИТИ ЗАЯВКУ</h3>
+                        <input id="footer-phone" type="text" placeholder="Номер телефону">
+                        <button id="footer-btn">Подати заявку<img src="img/Arrow 3.svg" alt=""></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/sliderHomeSection.js"></script>
     <script src="js/burgerMenu.js"></script>
 </body>
