--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <div class="col-3 col-lg-9 d-flex justify-content-end align-items-center">
                     <nav class="main-nav">
                         <ul class="nav-links">
-                            <li><a href="#">Контакти</a></li>
+                            <li><a href="#foot">Контакти</a></li>
                             <li><a href="#">Проєкти</a></li>
                             <li><a href="#">Команда</a></li>
-                            <li><a href="#">Про нас</a></li>
+                            <li><a href="#about">Про нас</a></li>
                         </ul>
                         <div class="burger">
                             <div class="line line1"></div>
@@ -69,7 +69,7 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="col-12">
                 <div class="row about-bg d-flex justify-content-center">
@@ -315,7 +315,7 @@
             </div>
         </div>
     </section>
-    <section class="form">
+    <section class="form" id="form">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
@@ -340,7 +340,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="foot">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-7">
